# New-mvp-9

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT_CHECKLIST.md  KEEP_ALIVE.md  Makefile  README.md  RENDER_DEPLOYMENT_INSTRUCTIONS.md  alert.rules  apps.txt  docker-compose.yml  eslint.config.js  fix_migrations.ts  funcs.txt  grafana-dashboard.json  index.html  netlify.toml  opencode.json  package-lock.json  package.json  prometheus.yml  render.yaml  replace_prints.cjs  replace_prints.py  vite.config.ts
backend/: .env.example  Dockerfile  bot_manager.py  config.py  dependencies.py  diagnose_bot.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: deps.py
backend/api/admin/: upload.py
backend/api/v1/: __init__.py  admin.py  auth.py  catalog.py  enrollment.py  live.py  notes.py  (+7 more)
backend/core/: cache.py  events.py  exceptions.py  rate_limiter.py  security.py
backend/middleware/: audit_middleware.py
backend/models/: catalog.py  enums.py  user.py  video.py
backend/realtime/: events.py  socket_server.py
backend/schemas/: catalog.py  response.py  user.py  video.py
backend/services/: analytics_service.py  cdn_service.py  drm_service.py  hls_generator.py  notification_service.py  payment_service.py  search_service.py  stream_service.py  telegram_service.py  telegram_upload_service.py  video_processor.py  watermark_service.py
backend/tests/: conftest.py  test_auth.py  test_catalog.py  test_stream.py
backend/utils/: formatters.py  helpers.py  validators.py
backend/workers/: email_worker.py  report_worker.py  upload_worker.py
(+189 files in other folders)
