[tool.poetry]
name = "nexusedu-backend"
version = "0.1.0"
description = "NexusEdu Backend"
authors = ["NexusEdu"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.5"
uvicorn = "0.32.1"
python-multipart = "0.0.9"
httpx = "0.27.2"
pyrogram = "2.0.106"
tgcrypto = "1.2.5"
python-socketio = {extras = ["asyncio"], version = "5.11.0"}
redis = "5.0.3"
pydantic-settings = "2.2.1"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
pillow = "10.3.0"
aiofiles = "23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.1.1"
pytest-asyncio = "0.23.6"
bandit = "1.7.8"
